feat: cmd sinonyms
feat: execute command from code by passing string
chore: move Core::Commands into separate files

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "System/MSP/STM32CubeF3"]
 	path = System/MSP/STM32CubeF3
 	url = https://github.com/lukasnee/STM32CubeF3.git
+[submodule "System/Components/Shell/cxxopts"]
+	path = System/Components/Shell/cxxopts
+	url = https://github.com/jarro2783/cxxopts.git
