--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,9 +60,20 @@
     "map": "cpp",
     "cinttypes": "cpp",
     "arm_math.h": "c",
-    "core_cm4.h": "c"
+    "core_cm4.h": "c",
+    "*.def": "cpp",
+    "bitset": "cpp",
+    "regex": "cpp",
+    "unordered_set": "cpp",
+    "set": "cpp",
+    "iomanip": "cpp"
 },
   "cmake.configureOnOpen": true,
   "C_Cpp.errorSquiggles": "Enabled",
-  "python.pythonPath": "/usr/bin/python3"
+"python.pythonPath": "/usr/bin/python3",
+"editor.defaultFormatter": "ms-vscode.cpptools",
+"html.format.wrapLineLength": 40,
+"prettier.printWidth": 120,
+"prettier.proseWrap": "always",
+"prettier.tabWidth": 4
 }
