chore: stuff and shenanigans

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,8 @@
                 "focus": true,
                 "panel": "dedicated",
                 "revealProblems": "onProblem"
-            }
+            },
+            "problemMatcher": []
         },
         {
             "label": "Serial /dev/serial0 [RPI4 UART]",
