improve: fibsys panic!

--- a/Modules/Spirale/CMakeLists.txt
+++ b/Modules/Spirale/CMakeLists.txt
@@ -290,5 +290,7 @@ add_custom_command(TARGET ${PROJECT_NAME}
     POST_BUILD
     COMMAND arm-none-eabi-objcopy -O ihex ${PROJECT_NAME} ${PROJECT_NAME}.hex
     COMMAND arm-none-eabi-objcopy -O binary ${PROJECT_NAME} ${PROJECT_NAME}.bin
+    COMMAND arm-none-eabi-nm ${PROJECT_NAME} -C -n -S -s > ${PROJECT_NAME}.address-sort.nm
+    COMMAND arm-none-eabi-nm ${PROJECT_NAME} -C -S -s --size-sort > ${PROJECT_NAME}.size-sort.nm
     COMMAND arm-none-eabi-size ${PROJECT_NAME}
 )
