clean: test project main.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,7 +71,13 @@
     "task.h": "c",
     "debug.h": "c",
     "logger.h": "c",
-    "system.h": "c"
+    "system.h": "c",
+    "cassert": "cpp",
+    "cfloat": "cpp",
+    "locale": "cpp",
+    "stack": "cpp",
+    "cstdbool": "cpp",
+    "stm32f3xx_hal.h": "c"
 },
   "cmake.configureOnOpen": true,
   "C_Cpp.errorSquiggles": "Enabled",
