--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-.cortex-debug.peripherals.state.json
-.cortex-debug.registers.state.json
+.vscode/.cortex-debug.peripherals.state.json
+.vscode/.cortex-debug.registers.state.json
+.vscode/settings.json
+
 Build/Debug
 Build/Release
 fib-log.txt
