fix: launch.json and tasks.json (minor)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
       "servertype": "stutil",
       "cpu": "cortex-m4",
       "preLaunchTask": "Build and Flash Higgs [Debug]",
-      "preRestartCommands": [ "jump __NVIC_SystemReset"],
-      "postRestartCommands": [],
+    //   "preRestartCommands": [ "jump __NVIC_SystemReset"],
+      "postRestartSessionCommands": [ "Reset target over ST-LINK" ],
       "executable": "${workspaceRoot}/Build/Debug/Modules/Higgs/Higgs",
       "svdFile": "${workspaceRoot}/System/MSP/STM32F303.svd",
       "interface": "swd",
