chore: clang-format !

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,91 +1,99 @@
 {
-  "files.associations": {
-    "*.tcc": "cpp",
-    "string": "cpp",
-    "array": "cpp",
-    "atomic": "cpp",
-    "cctype": "cpp",
-    "clocale": "cpp",
-    "cmath": "cpp",
-    "cstdarg": "cpp",
-    "cstddef": "cpp",
-    "cstdint": "cpp",
-    "cstdio": "cpp",
-    "cstdlib": "cpp",
-    "cwchar": "cpp",
-    "cwctype": "cpp",
-    "deque": "cpp",
-    "unordered_map": "cpp",
-    "vector": "cpp",
-    "exception": "cpp",
-    "algorithm": "cpp",
-    "functional": "cpp",
-    "iterator": "cpp",
-    "memory": "cpp",
-    "memory_resource": "cpp",
-    "numeric": "cpp",
-    "optional": "cpp",
-    "random": "cpp",
-    "string_view": "cpp",
-    "system_error": "cpp",
-    "tuple": "cpp",
-    "type_traits": "cpp",
-    "utility": "cpp",
-    "fstream": "cpp",
-    "initializer_list": "cpp",
-    "iosfwd": "cpp",
-    "istream": "cpp",
-    "limits": "cpp",
-    "new": "cpp",
-    "ostream": "cpp",
-    "sstream": "cpp",
-    "stdexcept": "cpp",
-    "streambuf": "cpp",
-    "typeinfo": "cpp",
-    "cerrno": "cpp",
-    "climits": "cpp",
-    "ios": "cpp",
-    "queue": "cpp",
-    "mutex": "cpp",
-    "chrono": "cpp",
-    "condition_variable": "cpp",
-    "ctime": "cpp",
-    "ratio": "cpp",
-    "thread": "cpp",
-    "*.hppdelete": "cpp",
-    "thread_delete": "cpp",
-    "cstring": "cpp",
-    "list": "cpp",
-    "iostream": "cpp",
-    "map": "cpp",
-    "cinttypes": "cpp",
-    "arm_math.h": "c",
-    "core_cm4.h": "c",
-    "*.def": "cpp",
-    "bitset": "cpp",
-    "regex": "cpp",
-    "unordered_set": "cpp",
-    "set": "cpp",
-    "iomanip": "cpp",
-    "freertos.h": "c",
-    "task.h": "c",
-    "debug.h": "c",
-    "logger.h": "c",
-    "system.h": "c",
-    "cassert": "cpp",
-    "cfloat": "cpp",
-    "locale": "cpp",
-    "stack": "cpp",
-    "cstdbool": "cpp",
-    "stm32f3xx_hal.h": "c"
-},
-  "cmake.configureOnOpen": true,
-  "C_Cpp.errorSquiggles": "Enabled",
-"python.pythonPath": "/usr/bin/python3",
-"editor.defaultFormatter": "ms-vscode.cpptools",
-"html.format.wrapLineLength": 40,
-"prettier.printWidth": 120,
-"prettier.proseWrap": "always",
-"prettier.tabWidth": 4,
-"diffEditor.wordWrap": "off"
+    "files.associations": {
+        "*.tcc": "cpp",
+        "string": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "deque": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "exception": "cpp",
+        "algorithm": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "string_view": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "fstream": "cpp",
+        "initializer_list": "cpp",
+        "iosfwd": "cpp",
+        "istream": "cpp",
+        "limits": "cpp",
+        "new": "cpp",
+        "ostream": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "typeinfo": "cpp",
+        "cerrno": "cpp",
+        "climits": "cpp",
+        "ios": "cpp",
+        "queue": "cpp",
+        "mutex": "cpp",
+        "chrono": "cpp",
+        "condition_variable": "cpp",
+        "ctime": "cpp",
+        "ratio": "cpp",
+        "thread": "cpp",
+        "*.hppdelete": "cpp",
+        "thread_delete": "cpp",
+        "cstring": "cpp",
+        "list": "cpp",
+        "iostream": "cpp",
+        "map": "cpp",
+        "cinttypes": "cpp",
+        "arm_math.h": "c",
+        "core_cm4.h": "c",
+        "*.def": "cpp",
+        "bitset": "cpp",
+        "regex": "cpp",
+        "unordered_set": "cpp",
+        "set": "cpp",
+        "iomanip": "cpp",
+        "freertos.h": "c",
+        "task.h": "c",
+        "debug.h": "c",
+        "logger.h": "c",
+        "system.h": "c",
+        "cassert": "cpp",
+        "cfloat": "cpp",
+        "locale": "cpp",
+        "stack": "cpp",
+        "cstdbool": "cpp",
+        "stm32f3xx_hal.h": "c"
+    },
+    "cmake.configureOnOpen": true,
+    "C_Cpp.errorSquiggles": "Enabled",
+    "python.pythonPath": "/usr/bin/python3",
+    "editor.guides.bracketPairs": true,
+    "html.format.wrapLineLength": 40,
+    "prettier.printWidth": 120,
+    "prettier.proseWrap": "always",
+    "prettier.tabWidth": 4,
+    "diffEditor.wordWrap": "off",
+
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "[c]": {
+        "editor.defaultFormatter": "xaver.clang-format"
+    },
+    "[cpp]": {
+        "editor.defaultFormatter": "xaver.clang-format"
+    }
 }
